--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,15 +9,18 @@ Vagrant.configure("2") do |config|
     v.memory = "1024"
 
     v.customize [
-      "modifyvm",        :id,
-      "--hwvirtex",      "on",
-      "--nestedpaging",  "on",
-      "--largepages",    "on",
-      "--ioapic",        "on",
-      "--pae",           "on",
-      "--paravirtprovider",  "kvm",
+      "modifyvm",           :id,
+      "--hwvirtex",         "on",
+      "--nestedpaging",     "on",
+      "--largepages",       "on",
+      "--ioapic",           "on",
+      "--pae",              "on",
+      "--paravirtprovider", "kvm",
+      "--uartmode1",        "disconnected",
     ]
   end
+
+  config.vm.boot_timeout = 900
 
   config.vm.provision("root", type: "shell",
                       path: "provision.root.sh",
